# BBCVC2HQCBR231211

src/: CMakeLists.txt
src/DecodeHQ/: CMakeLists.txt  DecodeHQ_Test.cpp  DecodeParams.cpp  DecodeParams.h
src/EncodeHQ_CBR/: CMakeLists.txt  EncodeHQ_CRB_Test.cpp  EncodeParams.cpp
